Adicionei outro parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi sint tenetur nostrum dolore totam, dolor saepe sit vel, repudiandae ea cumque, tempore eaque illo ab aspernatur unde earum perspiciatis maiores?</p>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum odit maiores saepe qui quasi commodi sapiente perspiciatis, vero dignissimos? Dicta expedita atque similique, necessitatibus consequuntur totam non fugit iste? Fugiat.</p>
 </body>
 </html>
