Dando os primeiro ajustes

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Meu primeiro site em repositório</title>
 </head>
 <body>
+    <header><h2> Um Simples Projeto!</h2></header>
     <h1>Olá, Mundo!</h1>
     <hr>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi sint tenetur nostrum dolore totam, dolor saepe sit vel, repudiandae ea cumque, tempore eaque illo ab aspernatur unde earum perspiciatis maiores?</p>
      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum odit maiores saepe qui quasi commodi sapiente perspiciatis, vero dignissimos? Dicta expedita atque similique, necessitatibus consequuntur totam non fugit iste? Fugiat.</p>
+    <hr>
+
 </body>
 </html>
